--- a/templates/cluster-logging-template.yaml.j2
+++ b/templates/cluster-logging-template.yaml.j2
@@ -18,10 +18,11 @@ spec:
           maxAge: 7d
       resources:
         limits:
-          memory: "{{ es_memory_limit }}"
+          cpu: 1000m
+          memory: {{ es_memory_limit }}
         requests:
-          cpu: "{{ es_cpu_requests }}"
-          memory: "{{ es_memory_requests }}"
+          cpu: 200m
+          memory: {{ es_memory_requests }}
       storage: {}
       redundancyPolicy: "{{ replication_policy }}"
   visualization:
